# soroban-external-contract-test

./: Cargo.toml  README.md
src/: lib.rs  test.rs
tests/: test.rs
